# excelsior

./: .editorconfig  .envrc  .gitignore  .pre-commit-config.yaml  LICENSE.md  Makefile  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: testing.instructions.md
docs/: README.md
src/excelsior/: __init__.py  _version.py  cli.py
src/excelsior/commands/: __init__.py  base.py  split.py
src/excelsior/schemas/: __init__.py  split.py
src/excelsior/utils/: __init__.py  data_processor.py  date_format_detector.py  logger.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_cli_integration.py
tests/integration/commands/: test_split_integration.py
tests/integration/utils/: __init__.py  test_data_processing_integration.py
tests/unit/commands/: test_base_command.py  test_split_command.py
tests/unit/schemas/: test_split_schema.py
tests/unit/utils/: __init__.py  test_data_processor.py  test_date_format_detector.py
